@@ -2,25 +2,24 @@ SUBDIRS=pixmaps
 scriptsdir = @datadir@/christine/gui
 
 scripts_DATA=__init__.py \
-   	about.glade \
-	add_files.glade \
-	dir_selector.glade \
-	error.glade \
-	file_selector.glade \
-	icon_view.glade \
-	jump_to.glade \
-	main_window.glade \
-	miniviewer.glade \
-	popmenu.glade \
-	preferences.glade \
-	properties.glade \
-	treeview.glade \
-	treeview_reorderable.glade \
-	tray_menu.glade \
-	open_remote.glade \
-	delete_file_from_disk_dialog.glade \
-	sources_treeview.glade
-
+about.glade \
+add_files.glade \
+delete_file_from_disk_dialog.glade \
+dir_selector.glade \
+error.glade \
+file_selector.glade \
+icon_view.glade \
+jump_to.glade \
+main_window.glade \
+miniviewer.glade \
+open_remote.glade \
+popmenu.glade \
+preferences.glade \
+properties.glade \
+sources_treeview.glade \
+tray_menu.glade \
+treeview.glade \
+treeview_reorderable.glade
 
 DISTFILES= Makefile.in $(scripts_DATA)
 
