@@ -2,7 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
 <!-- Generated with glade3
 	Version: 3.0.1
-	Date: Thu Dec 21 21:23:48 2006
+	Date: Sun Dec 24 16:11:25 2006
 	User: markuz
 	Host: cucusa
 -->
@@ -446,7 +446,6 @@
                     <child>
                       <widget class="GtkScrolledWindow" id="sources_sw">
                         <property name="width_request">150</property>
-                        <property name="visible">True</property>
                         <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                         <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                         <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
